-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P5
-
Affects Version/s: 11, 16, 17, 18, 19, 20
-
Component/s: hotspot
-
b24
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8298827 | 17.0.7-oracle | Tobias Hartmann | P5 | Resolved | Fixed | b01 |
| JDK-8299587 | 17.0.7 | Goetz Lindenmaier | P5 | Resolved | Fixed | b01 |
| JDK-8298845 | 11.0.19-oracle | Tobias Hartmann | P5 | Resolved | Fixed | b01 |
| JDK-8301751 | 11.0.19 | Goetz Lindenmaier | P5 | Resolved | Fixed | b01 |
- backported by
-
JDK-8298827 Assert in PhaseIdealLoop::dump_real_LCA is too strong
-
- Resolved
-
-
JDK-8298845 Assert in PhaseIdealLoop::dump_real_LCA is too strong
-
- Resolved
-
-
JDK-8299587 Assert in PhaseIdealLoop::dump_real_LCA is too strong
-
- Resolved
-
-
JDK-8301751 Assert in PhaseIdealLoop::dump_real_LCA is too strong
-
- Resolved
-
- relates to
-
JDK-8249607 C2: assert(!had_error) failed: bad dominance
-
- Resolved
-
-
JDK-8298736 Revisit usages of log10 in compiler code
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/37a15a10
-
Commit
openjdk/jdk17u-dev/c95dda4a
-
Commit
openjdk/jdk/decb1b79
-
Review
openjdk/jdk11u-dev/1656
-
Review
openjdk/jdk17u-dev/1026
-
Review
openjdk/jdk/10472
-
Review
openjdk/jdk/11015