8286800: Assert in PhaseIdealLoop::dump_real_LCA is too strong